--- a/drivers/media/spi/Makefile
+++ b/drivers/media/spi/Makefile
@@ -1,2 +1,3 @@
 obj-$(CONFIG_VIDEO_GS1662) += gs1662.o
 obj-$(CONFIG_VIDEO_ROCKCHIP_PREISP) += rk1608_dphy.o rk1608.o
+obj-$(CONFIG_VIDEO_TI_TOF) += tof_capture.o
