--- a/arch/arm64/boot/dts/rockchip/rk3399-linux.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-linux.dtsi
@@ -246,4 +246,16 @@
 				<2 11 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
+	tof_streamer_pins {
+		tof_streamer_default_pins: tof-streamer-default-pins {
+			rockchip,pins =
+				<1 8 RK_FUNC_GPIO &pcfg_pull_none>,
+				<1 18 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+		tof_streamer_sleep_pins: tof-streamer-sleep-pins {
+			rockchip,pins =
+				<1 8 RK_FUNC_GPIO &pcfg_pull_none>,
+				<1 18 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
 };
