--- a/arch/arm64/boot/dts/rockchip/rock960-model-ab-linux.dts
+++ b/arch/arm64/boot/dts/rockchip/rock960-model-ab-linux.dts
@@ -783,7 +783,7 @@
 	toggle-gpios = <&gpio1 18 GPIO_ACTIVE_HIGH>;
 
 	interrupt-parent = <&gpio1>;
-	interrupts = <8 IRQ_TYPE_EDGE_RISING>;
+	interrupts = <8 IRQ_TYPE_EDGE_FALLING>;
     };
 };
 
